# CCBridge

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
ADR/: ADR-001-python-cli-not-bash-or-mcp-first.md  ADR-002-audit-jsonl-ownership-orchestrator.md  README.md
Discovery/logs/: 2026-05-02-handoff-pr1-to-pr2.md  2026-05-02-handoff-pr2a-audit.md  2026-05-03-pr2b-audit-findings.md  2026-05-03-pr2c-checkpoint.md  conversation-log.md  decisions.md  insights.md
Output/: README.md
Projects/: README.md
Projects/00-strategy/: product-capabilities.md
Projects/v0.1-mvp/: PR2-plan.md  README.md
Rulebook/: INDEX.md  R-000-how-to-add-rules.md  R-001-workflow-no-commits-without-approval.md  R-002-workflow-no-debug-log-removal-without-approval.md  R-003-preference-ascii-tables.md  R-004-preference-versioning-files.md  R-005-workflow-tdd-default.md  R-006-workflow-verification-before-completion.md  R-007-workflow-planning-discipline.md  R-008-workflow-logs-vs-rulebook.md
audit/: 2026-04-28-pre-implementation-audit.md
docs/: development.md
src/ccbridge/: __init__.py  cli.py
src/ccbridge/core/: audit_log.py  config.py  context_builder.py  event_bus.py  events.py  lockfile.py  migrations.py  orchestrator.py  state.py  verdict.py
templates/: codex-system-prompt.md
tests/e2e/: test_full_cycle.py
tests/fixtures/: codex_event_stream.jsonl
tests/integration/: test_audit_log.py  test_audit_watch.py  test_claude_runner.py  test_cli.py  test_cli_config_wiring.py  test_cli_init.py  test_cli_uninstall.py  test_codex_runner.py  test_config.py  test_context_builder.py  test_lockfile.py  test_orchestrator.py  test_prompt_hook.py  test_state.py  test_stop_hook.py
tests/unit/: test_event_bus.py  test_events.py  test_migrations.py  test_renderers_base.py  test_resolve_executable.py  test_rich_renderer.py  test_shell_quoting.py  test_silent_renderer.py  test_verdict.py
(+11 files in other folders)
