[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccbridge"
version = "0.0.3.dev0"
description = "Automated peer-review pipeline between Claude Code and Codex CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "kophy" }]
keywords = ["ai", "code-review", "claude", "codex", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "tomli-w>=1.0",
    "rich>=13.0",
    "portalocker>=2.8",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.8",
]
mcp = ["mcp>=1.0"]

[project.scripts]
ccbridge = "ccbridge.cli:cli"

[project.urls]
Repository = "https://github.com/kophysty/CCBridge"

[tool.hatch.build.targets.wheel]
packages = ["src/ccbridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not e2e",
]
markers = [
    "e2e: end-to-end tests requiring real claude/codex CLIs in PATH. Skipped by default; opt in via `pytest -m e2e`.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
